# web-api-base-sdk-php

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Makefile.in  README.md  composer.json  configure.ac  phpunit.xml.dist
lib/: AbstractClient.php  AwsApiGatewayClient.php  BasicClient.php  ClientInterface.php  JwtClient.php  SignatureV4.php  SimpleClient.php
tests/: AbstractClientTestBase.php  AbstractFrameworkTestCase.php  AwsApiGatewayClientTest.php  AwsApiGatewayClientTestHelper.php  BasicClientTest.php  BasicClientTestHelper.php  GuzzleSendOverrideTrait.php  JwtClientTest.php  JwtClientTestHelper.php  SimpleClientTest.php  SimpleClientTestHelper.php
tests/ClientTestHelpers/: AwsApiGatewayClientTestHelper.php  BasicClientTestHelper.php  JwtClientTestHelper.php  SimpleClientTestHelper.php
